tests/sema/fail/v5_fail_i8_public.ep
# COMPILE_FAIL_CONTAINS: unknown type i8
fun main(): void {
    let x: i8 = 1
}
